# Event-Tracking-Platform

./: .env.example  .gitignore  Makefile  README.md
docs/: README.md
docs/adr/: 0001-base-engineering-platform-on-kubernetes.md  0002-kubernetes-namespace-and-tenancy-strategy.md  0003-managed-vs-self-hosted-kafka-flink.md  0004-decouple-stream-processing-and-search-sinks-with-kafka-connect.md  0004-deploy-airflow-workloads-as-kubernetes-pods.md  0005-dead-letter-topic-strategy-for-malformed-operational-events.md  0005-decouple-stream-processing-and-search-sinks-with-kafka-connect.md  0006-dead-letter-topic-strategy-for-malformed-operational-events.md  0006-standardize-local-kubernetes-development-on-minikube-docker.md  0007-deploy-airflow-workloads-as-kubernetes-pods.md  0007-standardize-local-kubernetes-development-on-minikube-docker.md  0008-establish-platform-security-baseline-and-secrets-governance.md  0009-define-reliability-slos-and-recovery-objectives.md  0010-implement-cost-and-utilization-governance.md  README.md
docs/architecture/: aws-well-architected-improvement-plan.md  deployment-architecture.md  deployment-runtime-topology.md  spring-boot-framework-and-patterns.md  system-architecture.md
docs/diagrams/: airflow-dag-orchestration.md  platform-architecture.md
docs/product/: event-taxonomy.md  use-cases.md
make/: local-runtime.mk  observability.mk
services/orchestration-api/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/orchestration-api/src/: main.py
services/orchestration-api/src/orchestration_api/: __init__.py  app.py
(+147 files in other folders)
