[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etp-orchestration-api"
version = "0.1.0"
description = "Wrapper API for Spark and dbt orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "pydantic>=2.7,<3",
  "uvicorn==0.34.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["orchestration_api*"]
